[package]
name = "cargo-musl-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
tokio = { version = "1.9", features = ["macros", "process", "rt-multi-thread"] }
anyhow = "1.0.70"
tempfile = "3.5.0"
tera = { version = "1.18.1", default-features = false }
